03-reseau/route-web.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-web
  namespace: pmguene-dev
spec:
  to:
    kind: Service
    name: service-dmz
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
