03-reseau/networkpolicy-web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: proteger-serveur-web
  namespace: pmguene-dev
spec:
  podSelector:
    matchLabels:
      app: serveur-web
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
